# ebbforge-swarm-intelligence

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  memory_calibration.py  openrustswarm.py  quick_start_test.py  verify_all_benchmarks.py
.github/workflows/: ci.yml
demo/: demo_server.py  index.html  instructions.md
examples/: memory_calibration.py  openrustswarm.py  quick_start_test.py  verify_all_benchmarks.py
openrustswarm/: __init__.py  agent.py  overmind.py
openrustswarm-core/: Cargo.toml  README.md  clean_locks.py  docker-compose.yml  pyproject.toml
openrustswarm-core/src/: lib.rs
openrustswarm-core/src/compliance/: audit.rs  escalation.rs  sanitizer.rs
openrustswarm-core/src/core/: graph.rs  runner.rs  shared_memory.rs  tools.rs  workflow.rs
openrustswarm-core/src/evolution/: curiosity.rs  metacognition.rs  population.rs  sandbox.rs  synthesizer.rs
openrustswarm-core/src/intel/: introspection.rs  pollination.rs  pruning.rs  safety.rs
openrustswarm-core/src/swarm/: criticality_test.rs  ebbforge_engine.rs  grid.rs  lod.rs  master_pipeline.rs  mmap_pool.rs  mod.rs  promoter.rs  py_api.rs  scale_test.rs  spatial.rs  swarm_engine.rs  tensor_engine.rs
openrustswarm-core/src/utils/: benchmark.rs
openrustswarm-core/src/worldmodel/: consolidator.rs  diffusion.rs  dynamics.rs  mod.rs  planner.rs
